--- a/css/main.css
+++ b/css/main.css
@@ -339,9 +339,9 @@ ul li {
 }
 
 /* ==========================================================================
-	$intro
+	Video
 ========================================================================== */
-.intro {
+#video-section {
 	background-color: transparent;
 }
 
