--- a/css/main.css
+++ b/css/main.css
@@ -297,6 +297,7 @@ ul li {
 	color: #fff;
 	font-family: "Open Sans", Arial, sans-serif;
 	font-size: 10rem;
+	line-height: 1;
 	font-weight: 700;
 	text-transform: uppercase;
 }
@@ -473,10 +474,6 @@ footer .social-links li .fa:hover {
 
 /* Career */
 
-.rela-block {
-  display: block;
-  position: relative;
-}
 .side-buttons-container {
   position: fixed;
   top: 50%;
@@ -553,7 +550,7 @@ footer .social-links li .fa:hover {
   transition: 0.3s ease;
 }
 .side-button:nth-child(1)::after {
-  content: "ANGLES";
+  content: "Intro";
 }
 .side-button:nth-child(2)::before {
   content: "";
@@ -571,7 +568,7 @@ footer .social-links li .fa:hover {
   transition: 0.3s ease;
 }
 .side-button:nth-child(2)::after {
-  content: "HIPSTER";
+  content: "Job Experience";
 }
 .side-button:nth-child(3)::before {
   content: "";
@@ -589,13 +586,13 @@ footer .social-links li .fa:hover {
   transition: 0.3s ease;
 }
 .side-button:nth-child(3)::after {
-  content: "GAMING";
+  content: "Training";
 }
 .side-button:nth-child(4)::after {
-  content: "IDK Yet";
+  content: "Certificate";
 }
 .side-button:nth-child(5)::after {
-  content: "IDK Yet";
+  content: "Thesis";
 }
 .side-button:hover {
   background-color: #da2;
@@ -606,18 +603,17 @@ footer .social-links li .fa:hover {
 .big-section {
   display: block;
   position: relative;
-  height: 720px;
   overflow: hidden;
   border-bottom: 1px solid;
   box-sizing: border-box;
-  font-family: "Raleway";
+  font-family: initial;
   font-size: 24px;
   line-height: 32px;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
 }
 .big-section:nth-child(1) {
-  background-color: #d3d9d9;
-  height: 1400px;
+  background-color: transparent;
+  height: 50vh;
 }
 .big-section:nth-child(4) {
   background-color: #d3d9d9;
@@ -629,688 +625,25 @@ footer .social-links li .fa:hover {
 .big-section:nth-child(3) {
   background-color: #e5e7e1;
 }
-.content-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  height: 85%;
-  background-color: #fff;
-  overflow: hidden;
-  box-shadow: -10px 8px 28px 8px rgba(0,0,0,0.3);
-}
-.content-container.half-container {
-  width: 470px;
-  background-color: #f0f0f0;
-}
-.content-container.full-page-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 1000px;
-}
-.first-background-part {
-  display: block;
-  position: relative;
-  background-color: #3c3d42;
-  height: 40%;
-  z-index: 2;
-}
-.first-background-part::before {
-  content: "";
-  position: absolute;
-  bottom: -40%;
-  left: 0;
-  width: 130%;
-  height: 130%;
-  background-color: #3c3d42;
-  -webkit-transform: skewY(-45deg);
-          transform: skewY(-45deg);
-}
-.first-bottom-part {
-  position: absolute;
-  top: 68%;
-  left: -6%;
-  width: 130%;
-  height: 200px;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  text-transform: uppercase;
-  text-align: center;
-}
-.first-overlap-part {
-  position: absolute;
-  z-index: 5;
-  top: -150px;
-  left: 50%;
-  -webkit-transform: translateX(-50%) rotate(45deg);
-          transform: translateX(-50%) rotate(45deg);
-  height: 500px;
-  width: 500px;
-  background-color: #6ddbce;
-}
-.first-overlap-part::before {
-  content: "You Should Put Some Text Here";
-  position: absolute;
-  top: 112%;
-  left: 65%;
-  width: 120%;
-  height: 80px;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 300;
-  text-align: center;
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-}
-.first-corner-part {
-  position: absolute;
-  right: -53.5%;
-  bottom: -19.6%;
-  height: 490px;
-  width: 530px;
-  background-color: #6ddbce;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-.first-corner-part .corner-diamond-container {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-  overflow: hidden;
-  box-sizing: border-box;
-  top: 30%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(90deg);
-          transform: translate(-50%, -50%) rotate(90deg);
-}
-.first-corner-part .corner-diamond-container::before {
-  content: "";
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  right: 20px;
-  bottom: 20px;
-  border: 3px solid #000;
-}
-.first-corner-part .corner-diamond-container::after {
-  content: "";
-  position: absolute;
-  top: 35px;
-  left: 35px;
-  right: 20px;
-  bottom: 20px;
-  border: 3px solid #000;
-}
-.first-corner-part .corner-diamond-container:hover {
-  -webkit-transform: translate(-50%, -50%) rotate(90deg) scale(1.4);
-          transform: translate(-50%, -50%) rotate(90deg) scale(1.4);
-}
-.first-top-part {
-  position: absolute;
-  top: 20px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  height: 220px;
-  width: 430px;
-  z-index: 10;
-}
-.diamond-container {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-  overflow: hidden;
-  box-sizing: border-box;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-}
-.diamond-container:nth-child(1) {
-  top: 95px;
-  left: 24px;
-}
-.diamond-container:nth-child(1) .diamond-background {
-  background: url("http://skream.jp/news/assets_c/2013/07/daftpunk-thumb-1200xauto-5253.jpg") no-repeat center;
-}
-.diamond-container:nth-child(2) {
-  top: 25px;
-  left: 95px;
-  background-color: #ddd;
-}
-.diamond-container:nth-child(3) {
-  top: 96px;
-  left: 165px;
-  background-color: rgba(0,0,0,0.3);
-}
-.diamond-container:nth-child(4) {
-  top: 25px;
-  left: 235px;
-}
-.diamond-container:nth-child(4) .diamond-background {
-  background: url("https://d13yacurqjgara.cloudfront.net/users/464297/screenshots/1849217/dribbb2-01_1x.jpg") no-repeat right;
-}
-.diamond-container:nth-child(5) {
-  top: 95px;
-  left: 306px;
-  background-color: #333;
-}
-.diamond-container:nth-child(6) {
-  top: 260px;
-  left: 165px;
-}
-.diamond-container:nth-child(6)::before {
-  content: "";
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  right: 20px;
-  bottom: 20px;
-  border: 3px solid #000;
-}
-.diamond-container:nth-child(6)::after {
-  content: "";
-  position: absolute;
-  top: 35px;
-  left: 35px;
-  right: 20px;
-  bottom: 20px;
-  border: 3px solid #000;
-}
-.diamond-container:hover {
-  -webkit-transform: rotate(45deg) scale(1.3);
-          transform: rotate(45deg) scale(1.3);
-  z-index: 15;
-  -webkit-transition: 0.3s ease, z-index 0.05s linear;
-  transition: 0.3s ease, z-index 0.05s linear;
-}
-.diamond-container.fade-out-before::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0,0,0,0.6);
-  -webkit-transition: 0.4s ease;
-  transition: 0.4s ease;
-  z-index: 20;
-}
-.diamond-container.fade-out-before:hover::before {
-  opacity: 0;
-}
-.diamond-background {
-  position: absolute;
-  top: -25%;
-  left: -25%;
-  height: 150%;
-  width: 150%;
-  background-size: cover !important;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-.diamond-inner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  height: 48%;
-  width: 48%;
-  text-align: center;
-}
-.social-buttons-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 80px;
-  text-align: center;
-}
-.social-button {
-  display: inline-block;
-  position: relative;
-  height: 50px;
-  width: 50px;
-  background-size: cover !important;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-  margin: 14px 2px;
-  cursor: pointer;
-}
-.social-button:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-transition: 0.3s cubic-bezier(0.3, 0.2, 0, 2.5);
-  transition: 0.3s cubic-bezier(0.3, 0.2, 0, 2.5);
-}
-.social-button.twitter-button {
-  background: url("https://cdn4.iconfinder.com/data/icons/hexagon-black-social/60/twitter-256.png") no-repeat center;
-}
-.social-button.github-button {
-  background: url("https://cdn4.iconfinder.com/data/icons/hexagon-black-social/60/github-256.png") no-repeat center;
-}
-.social-button.facebook-button {
-  background: url("https://cdn4.iconfinder.com/data/icons/hexagon-black-social/60/facebook-256.png") no-repeat center;
-}
-.social-button.pinterest-button {
-  background: url("https://cdn4.iconfinder.com/data/icons/hexagon-black-social/60/pinterest-256.png") no-repeat center;
-}
-.social-button.linkedin-button {
-  background: url("https://cdn4.iconfinder.com/data/icons/hexagon-black-social/60/linkedin-256.png") no-repeat center;
-}
-.flex-half {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 0;
-      -ms-flex: 1 1 0;
-          flex: 1 1 0;
-  box-sizing: border-box;
-}
-.hipster-left-half {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 50%;
-  background: url("http://watmmagazine.com/wp-content/uploads/2012/10/484432_386260888095817_1540832805_n.jpg") no-repeat center;
-  background-size: cover !important;
-}
-.hipster-right-half {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 50%;
-  box-shadow: -5px 0px 15px -1px rgba(0,0,0,0.3);
-  overflow: hidden;
-}
-.hipster-scroll-selector {
-  display: block;
-  position: relative;
-  z-index: 15;
-  height: 70px;
-  width: 100%;
-  box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.3);
-  text-align: center;
-}
-.hipster-scroll-selector .hipster-selector-link {
-  display: inline-block;
-  text-decoration: none;
-  color: #000;
-  position: relative;
-  font-size: 14px;
-  margin: 0 8px;
-  line-height: 70px;
-  cursor: pointer;
-}
-.hipster-scroll-selector .hipster-selector-link::before {
-  content: "";
-  position: absolute;
-  height: 2px;
-  width: 80%;
-  background-color: transparent;
-  bottom: 10px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-}
-.hipster-scroll-selector .hipster-selector-link:hover::before {
-  bottom: 20px;
-  background-color: #000;
-}
-.hipster-scroll-selector .hipster-selector-link.active::before {
-  bottom: 20px;
-  background-color: #000;
-}
-.selection-box {
-  position: absolute;
-  z-index: 5;
-  opacity: 0;
-  top: 70px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #f0f0f0;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-}
-.selection-box.active {
-  opacity: 1;
-  z-index: 10;
-}
-.chillwave-top-text {
-  position: absolute;
-  top: 46%;
-  left: 50%;
-  width: 90%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  font-size: 34px;
-  font-weight: 600;
-  line-height: 40px;
-  letter-spacing: 5px;
-  text-align: center;
-}
-.chillwave-bottom-text {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  width: 90%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 3px;
-  text-align: center;
-}
-.chillwave-art {
-  position: absolute;
-  top: 5%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  height: 200px;
-  width: 200px;
-  background-size: cover !important;
-}
-.chillwave-art.one {
-  background: url("http://www.bromygod.com/wp-content/uploads/2014/04/fun-017-04272014.jpg") no-repeat center;
-  left: 27%;
-}
-.chillwave-art.two {
-  background: url("http://thenewlofi.com/wp-content/uploads/2015/01/chillwave_wednesday1-500x4041.jpg") no-repeat center;
-  left: 73%;
-}
-.chillwave-art:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0,0,0,0.4);
-  -webkit-transition: 0.4s ease;
-  transition: 0.4s ease;
-}
-.chillwave-art:hover::before {
-  background-color: rgba(0,0,0,0);
-}
-.yolo-art {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  height: 250px;
-  width: 460px;
-  line-height: 10px;
-  text-align: center;
-  background: url("https://media.giphy.com/media/o0GlXnmHwBlde/giphy.gif") no-repeat center;
-  background-size: cover;
-}
-.quarter-square {
-  position: absolute;
-  height: 50%;
-  width: 50%;
-  font-size: 14px;
-  letter-spacing: 2px;
-}
-.quarter-square.top-left {
-  top: 0;
-  left: 0;
-}
-.quarter-square.top-right {
-  top: 0;
-  right: 0;
-}
-.quarter-square.bottom-left {
-  bottom: 0;
-  left: 0;
-}
-.quarter-square.bottom-right {
-  bottom: 0;
-  right: 0;
-}
-.quarter-square .center-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 90%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-.old-timey-photo {
-  height: 100%;
-  width: 100%;
-  background-size: cover !important;
-}
-.old-timey-photo.one {
-  background: url("http://40.media.tumblr.com/5ed90f8d42ab3001acbaef77f2e69042/tumblr_mtlz77i1nm1rfwfq9o1_500.jpg") no-repeat center;
-}
-.old-timey-photo.two {
-  background: url("http://blogs.oberlin.edu/pictures/Aries/hipster_love.jpg") no-repeat center;
-}
-.old-timey-photo::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: 0.6;
-  background: url("http://il7.picdn.net/shutterstock/videos/2952439/thumb/1.jpg") no-repeat center;
-  background-size: cover !important;
-}
-.photography-box,
-.style-box {
-  padding-top: 40px;
-  text-align: center;
-}
-.inner-content-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  overflow-x: hidden;
-  text-align: center;
-  box-shadow: 5px 0 22px 1px rgba(0,0,0,0.3);
-}
-.inner-content-container::-webkit-scrollbar {
-  width: 10px;
-}
-.inner-content-container::-webkit-scrollbar-thumb {
-  background-color: rgba(0,0,0,0.4);
-}
-.inner-content-container::-webkit-scrollbar-track {
-  background-color: rgba(0,0,0,0.2);
-}
-.side-bar {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 260px;
-  padding: 40px 10px 20px;
-  text-align: center;
-  background-color: #f0f0f0;
-}
-.side-bar .side-bar-item-container .side-bar-item {
-  margin: 30px 0;
-  text-transform: uppercase;
-  font-weight: 600;
-  cursor: pointer;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-}
-.side-bar .side-bar-item-container .side-bar-item:hover {
-  color: #e78533;
-}
-.third-header-bar {
-  height: 60px;
-  background-color: #fff;
-  box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.5);
-  padding: 10px 40px;
-  z-index: 15;
-}
-.third-header-bar .logo {
-  display: inline-block;
-  position: relative;
-  line-height: 60px;
-  text-transform: uppercase;
-  float: left;
-  font-weight: 300;
-}
-.third-header-bar .logo span {
-  color: #e78533;
-  font-weight: 600;
-}
-.third-header-bar .hamburger-thing {
-  display: inline-block;
-  position: relative;
-  float: right;
-  margin-top: 8px;
-  height: 45px;
-  width: 45px;
-  -webkit-transition: 0.4s ease;
-  transition: 0.4s ease;
-}
-.third-header-bar .hamburger-thing .white-bar {
-  position: absolute;
-  height: 2px;
-  width: 66%;
-  background-color: #000;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  -webkit-transition: 0.4s ease, width 0.3s ease;
-  transition: 0.4s ease, width 0.3s ease;
-}
-.third-header-bar .hamburger-thing .white-bar:nth-child(1) {
-  top: 25%;
-}
-.third-header-bar .hamburger-thing .white-bar:nth-child(2),
-.third-header-bar .hamburger-thing .white-bar:nth-child(3) {
-  top: 47%;
-}
-.third-header-bar .hamburger-thing .white-bar:nth-child(4) {
-  top: 71%;
-}
-#menuButton {
-  display: none;
-}
-#menuButton:checked+ .hamburger-thing .white-bar:nth-child(1),
-#menuButton:checked+ .hamburger-thing .white-bar:nth-child(4) {
-  width: 0%;
-}
-#menuButton:checked+ .hamburger-thing .white-bar:nth-child(2) {
-  -webkit-transform: translateX(-50%) rotate(45deg);
-          transform: translateX(-50%) rotate(45deg);
-}
-#menuButton:checked+ .hamburger-thing .white-bar:nth-child(3) {
-  -webkit-transform: translateX(-50%) rotate(-45deg);
-          transform: translateX(-50%) rotate(-45deg);
-}
-.third-top-image-container {
-  height: calc(100% - 80px);
-  background: url("http://4.bp.blogspot.com/-1UHmmr4AumQ/T-QwGJwJduI/AAAAAAAAKRE/6Vgq1WmrEzM/s1600/photoshops+(81).jpg") no-repeat center;
-  background-size: cover;
-}
-.third-top-image-container::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0,0,0,0.6);
-}
-.pop-text-container {
-  position: absolute;
-  top: 100px;
-  left: 70px;
-  text-align: left;
-  width: 480px;
-  color: #fff;
-  font-family: "Montserrat";
-}
-.pop-text-container .pop-text {
-  font-size: 50px;
-  line-height: 58px;
-  font-weight: 700;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-  color: #e78533;
-}
-.pop-text-container .pop-text span {
-  color: #fff;
-}
-.pop-text-container .smaller-pop-text {
-  font-size: 16px;
-  line-height: 20px;
-}
-.down-arrow {
-  position: absolute;
-  height: 45px;
-  width: 105px;
-  bottom: 60px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  -webkit-animation: bob 1.1s alternate infinite ease-in-out;
-          animation: bob 1.1s alternate infinite ease-in-out;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-}
-.down-arrow::before,
-.down-arrow::after {
-  content: "";
-  position: absolute;
-  width: 40%;
-  height: 4px;
-  background-color: #fff;
-  top: 20px;
-}
-.down-arrow::before {
-  -webkit-transform: rotate(36deg);
-          transform: rotate(36deg);
-  left: 15%;
-}
-.down-arrow::after {
-  -webkit-transform: rotate(-36deg);
-          transform: rotate(-36deg);
-  left: 45.5%;
-}
-.third-info-container {
-  height: 562px;
-  background: #fff;
-  padding: 40px 20px 10px;
-  text-align: center;
-}
-.ps4-side-image {
-  position: absolute;
-  height: 489px;
-  width: 835px;
-  left: 55%;
-  background: url("http://freepngimages.com/wp-content/uploads/2015/10/playstation-4-games-console.png") no-repeat center;
-  z-index: 5;
-}
-.third-footer-container {
-  height: 300px;
-  background: #222;
-}
-@-webkit-keyframes bob {
-  to {
-    bottom: 10px;
-  }
-}
-@keyframes bob {
-  to {
-    bottom: 10px;
-  }
-}
+
+.intro h1 span {
+	font-size: 5rem;
+	line-height: 1;
+}
+
+.page-section-two {
+	height: 100%;
+}
+address {
+	letter-spacing: 1px;
+}
+
+
+
+
+
+
+
+
+
+
