--- a/css/main.css
+++ b/css/main.css
@@ -348,11 +348,19 @@ ul li {
 	text-transform: uppercase;
 }
 .btn-large:hover {
-	background-color: #3d3d3d;
+	background-color: #000;
 	color: #fff;
+	box-shadow:2px 2px 5px #777;
 }
-.btn-large a:hover {
-	color: #fff;
+.btn-large:hover span {
+	display: none;
+}
+a.btn-large:active {
+	background-color: yellow;
+	outline: 0;
+}
+.btn-large:hover:before {
+	content: "Click to Download Resume";
 }
 
 /* ==========================================================================
