--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 
 @import url(//fonts.googleapis.com/css?family=Open%20Sans:300,400,500,600,700);
 @import url(//fonts.googleapis.com/css?family=Merriweather:300,400,500,600,700);
+@import url('https://fonts.googleapis.com/css?family=Bungee+Inline');
 p {
 	font-size: 13px;
 	line-height: 22.4px;
@@ -281,7 +282,7 @@ ul li {
 -------------------------------------------------------------------------------*/
 
 .banner {
-	background-image: url(../img/top-bg.jpg);
+	background-image: url(../img/home-top.jpg);
 	background-position: center top;
 	background-repeat: no-repeat;
 	-moz-background-size: cover;
@@ -295,10 +296,9 @@ ul li {
 }
 .banner-text h1 {
 	color: #fff;
-	font-family: "Open Sans", Arial, sans-serif;
+	font-family: 'Bungee Inline', cursive;
 	font-size: 10rem;
 	line-height: 1;
-	font-weight: 700;
 	text-transform: uppercase;
 }
 .banner-text p {
@@ -306,7 +306,8 @@ ul li {
 	font-size: 2rem;
 	font-weight: 400;
 	line-height: 24px;
-	margin-top: 30px;
+	margin: 0 auto;
+    max-width: 750px;
 	margin-bottom: 20px;
 }
 
@@ -444,7 +445,7 @@ footer .social-links li .fa:hover {
 -------------------------------------------------------------------------------*/
 
 .contact-banner {
-	background-image: url(../img/contact-bg.jpg);
+	background-image: url(https://static.pexels.com/assets/headers/ballon-1505330e4bac7007b5d5dcc335058e88ad8358fa78cbf94b9a66ffec0f1a5466.jpg);
 	background-position: center top;
 	background-repeat: no-repeat;
 	-moz-background-size: cover;
@@ -488,7 +489,7 @@ footer .social-links li .fa:hover {
 
 /*============ Career ============*/
 .career-bg {
-	background-image: url(../img/career-bg.jpg);
+	background-image: url(../img/career-intro.jpg);
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -652,7 +653,7 @@ footer .social-links li .fa:hover {
 }
 
 .intro h1 span {
-	font-size: 5rem;
+	font-size: 4rem;
 	line-height: 1;
 }
 
