home top bg changes

--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,7 @@ footer .social-links li .fa:hover {
 -------------------------------------------------------------------------------*/
 
 .contact-banner {
-	background-image: url(https://static.pexels.com/assets/headers/ballon-1505330e4bac7007b5d5dcc335058e88ad8358fa78cbf94b9a66ffec0f1a5466.jpg);
+	background-image: url(../img/home-top.jpg);
 	background-position: center top;
 	background-repeat: no-repeat;
 	-moz-background-size: cover;
