pre loader added

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,16 @@ h5 {
 /* ------------------------------------------------------------------------------
 	Global Styles
 -------------------------------------------------------------------------------*/
+.loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url('../img/preloader_128.gif') 50% 50% no-repeat rgb(255,255,255);
+}
+
 img { max-width:100%; }
 
 a {
