--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ ul li {
 	color:#fff;
 	text-decoration:none;
 	text-transform:uppercase;
-	letter-spacing:7px;
+	letter-spacing: 5px;
 }
 #header.fixed {
 	background-color: #fff;
@@ -348,6 +348,7 @@ ul li {
 
 .btn-large {
 	padding: 15px 40px;
+	margin-bottom: 2.5rem;
 	background-color: #fff;
 	color: #777;
 	font-size: 1.5rem;
@@ -422,6 +423,124 @@ a.play {
 .popup .content {
   max-height: 30%;
   overflow: auto;
+}
+
+/*==========================================================================
+						Slider
+===========================================================================*/
+.intro {
+	position: relative;
+	width: 100%;
+	height: 80vh;
+}
+.left {
+	float: left;
+	height: 100%;
+	width: 60%;
+	padding: 3rem 3rem 3rem 5rem;
+	display: table;
+}
+.left > div {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+h1 {
+	font-size: 8rem;
+	margin-bottom: 3rem;
+}
+h1 + p {
+  color: #949494;
+  font-size: 1.6rem;
+  margin-bottom: 4rem;
+}
+p + a {
+  font-size: 1.6rem;
+  color: #000;
+}
+.slider {
+	float: right;
+	position: relative;
+	width: 40%;
+	height: 100%;
+}
+.slider li {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	transition: clip .7s ease-in-out, z-index 0s .7s;
+	clip: rect(0, 100vw, 100vh, 100vw);
+	display: table;
+}
+.center-y {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	color: #fff;
+}
+h3 {
+	font-size: 5rem;
+	font-style: italic;
+}
+h3 + a {
+	font-size: 1.6rem;
+	display: inline-block;
+	color: #fff;
+	margin-top: 2rem;
+}
+h3, h3 + a {
+	opacity: 0;
+	transition: opacity .7s 0s, transform .5s .2s;
+	transform: translate3d(0, 50%, 0);
+}
+li.current h3, li.current h3 + a {
+	opacity: 1;
+	transition-delay: 1s;
+	transform: translate3d(0, 0, 0);
+}
+li.current {
+	z-index: 1;
+	clip: rect(0, 100vw, 100vh, 0);
+}
+li.prev {
+	clip: rect(0, 0, 100vh, 0);
+}
+.slider nav {
+	position: absolute;
+	bottom: 5%;
+	left: 0;
+	right: 0;
+	text-align: center;
+	z-index: 10;
+}
+.intro nav a {
+	display: inline-block;
+	border-radius: 50%;
+	width: 1.2rem;
+	height: 1.2rem;
+  	min-width: 12px;
+  	min-height: 12px;
+	background: #fff;
+	margin: 0 1rem;
+  	transition: transform .3s;
+}
+a.current_dot {
+	transform: scale(1.4);
+}
+@media screen and (max-width: 700px) {
+	.left {
+		width: 100%;
+		height: 30%;
+	}
+	.slider {
+		width: 100%;
+		height: 70%;
+	}
 }
 
 /* ==========================================================================
