--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,7 @@ ul li {
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
 	text-transform: uppercase;
+	box-shadow: 0 10px 30px rgba(255, 255, 255, 0.35);
 }
 .btn-large:hover {
 	background-color: #000;
@@ -380,6 +381,7 @@ a.btn-large:active {
 ========================================================================== */
 a.play {
 	padding: 10px;
+	box-shadow: 0 10px 30px rgba(255, 255, 255, 0.35);
 }
 .overlay {
   position: fixed;
