--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,6 @@ ul li {
 /* ------------------------------------------------------------------------------
 							Banner
 -------------------------------------------------------------------------------*/
-
 .banner {
 	background-image: url(../img/top-bg.jpg);
 	background-position: center top;
@@ -299,7 +298,7 @@ ul li {
 	-o-background-size: cover;
 	-webkit-background-size: cover;
 	background-size: cover;
-	min-height: 750px;
+	height: 100vh;
 }
 .banner-text {
 	padding-top: 22%;
